# gmn-python-api

./: .cookiecutter.json  .coveragerc  .flake8  .gitignore  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  LICENSE.rst  README.md  README.rst  TROUBLESHOOTING.md  TROUBLESHOOTING.rst  codecov.yml  global_meteor_network_data_analysis_template.ipynb  noxfile.py  pull_request_template.md  pyproject.toml
.github/ISSUE_TEMPLATE/: generic_issue_template.md
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  data_directory.md  data_directory.rst  data_schema.rst  data_schemas.md  data_schemas.rst  index.md  index.rst  reference.rst  requirements.txt  rest_api.md  rest_api.rst  troubleshooting.md  troubleshooting.rst  usage.md  usage.rst
src/gmn_python_api/: __init__.py  __main__.py  data_directory.py  gmn_data_directory.py  gmn_data_store_rest_api.py  gmn_rest_api.py  gmn_trajectory_summary_reader.py  iau_showers.py  meteor_summary_csv_reader.py  meteor_summary_reader.py  meteor_summary_schema.py  meteor_trajectory_reader.py  meteor_trajectory_schema.py  trajectory_summary_reader.py  trajectory_summary_schema.py
src/gmn_python_api/data_models/: traj_summary_20220304_solrange_344.0-345.0.txt  traj_summary_20220304_solrange_344.0-345.0_one_row.txt
tests/: __init__.py  expected_gmn_meteor_summary_reader_values.py  expected_gmn_trajectory_summary_reader_values.py  test_data_directory.py  test_gmn_data_directory.py  test_gmn_data_store_rest_api.py  test_gmn_rest_api.py  test_gmn_trajectory_summary_reader.py  test_iau_showers.py  test_main.py  test_meteor_summary_csv_reader.py  test_meteor_summary_reader.py  test_meteor_summary_schema.py  test_trajectory_summary_reader.py  test_trajectory_summary_schema.py
tests/integration/: __init__.py  test_data_directory_integration.py  test_iau_integration.py
tests/test_data/: streamfulldata.txt  test_short_traj_summary.txt  traj_summary_20181209_solrange_257.0-258.0.txt  traj_summary_all.txt  traj_summary_monthly_201812.txt
tests/unit/: __init__.py  expected_meteor_trajectory_reader_values.py  test_data_directory.py  test_gmn_rest_api.py  test_iau_showers.py  test_main.py  test_meteor_summary_reader.py  test_meteor_summary_schema.py  test_meteor_trajectory_reader.py  test_meteor_trajectory_schema.py
tests/unit/test_data/: meteor_summary.txt  rest_api_meteor_summary.txt  traj_summary_monthly_201812.txt
