[tool.poetry]
name = "gmn-python-api"
version = "0.0.3"
description = "GMN Python API"
authors = ["Ricky Bassom <rickybas12@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/gmn-data-platform/gmn-python-api"
repository = "https://github.com/gmn-data-platform/gmn-python-api"
documentation = "https://gmn-python-api.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/gmn-data-platform/gmn-python-api/releases"

[tool.poetry.dependencies]
python = "^3.7.1"
click = "^7.1.2"
pandas = ">=1.1.0, <=1.3.5"
numpy = ">1.20.3"
beautifulsoup4 = "^4.10.0"
requests = "^2.21.0"
types-requests = "^2.27.8"
pandavro = "1.6.0"
avro = "1.11.0"
avro-validator = "1.0.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
coverage = {extras = ["toml"], version = "^6.1"}
safety = "^1.10.3"
mypy = "^0.931"
typeguard = "^2.13.2"
xdoctest = {extras = ["colors"], version = "^0.15.10"}
sphinx = "^4.3.0"
sphinx-autobuild = ">=2021.3.14"
pre-commit = "^2.15.0"
flake8 = "^4.0.1"
black = ">=21.10b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.9.2"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.1"
darglint = "^1.8.1"
reorder-python-imports = "^2.6.0"
pre-commit-hooks = "^4.0.1"
sphinx-click = "^3.0.2"
Pygments = "^2.10.0"
pyupgrade = "^2.29.1"
furo = ">=2021.11.12"
sphinx-autoapi = "^1.8.4"
kaleido = "0.2.1"
dtale = "^1.61.1"

[tool.poetry.scripts]
gmn-python-api = "gmn_python_api.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["gmn_python_api", "tests"]
omit = ["**/tests/*", "**/__init__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 100
omit = ["**/tests/*", "**/__init__.py"]
exclude_lines = ["pragma: no cover"]

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
disallow_untyped_calls = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
